# poodle

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  code-coverage.json  mutation-testing-report.json  mutation-testing-report.xml  mutation_testing_report.json  notes.ipynb  pyproject.toml  requirements.txt  temp.py  tools.ipynb
.github/workflows/: mutmut-mutation-test.yml  poodle-mutation-test.yml  python-mutation-test.yml  python-mutmut.yml  python-platform-test.yml  python-publish.yml  python-test-matrix.yml  python-test-scan.yml  update-coverage.yml  update-version.yml
docs/: compare.md  mutatest.md  mutators.md  mutmut.md  requirements.txt  tools.ipynb
docs/source/: conf.py  credits.md  index.md  mutation.md  mutators.md  options.md  reporter_json_example.md  reporters.md  runners.md  usage.md
docs/source/_static/mutation_reports/: html-report.js  index.html  module-1.html  module-10.html  module-11.html  module-12.html  module-13.html  module-14.html  module-15.html  module-16.html  module-2.html  module-3.html  module-4.html  module-5.html  module-6.html  module-7.html  module-8.html  module-9.html
example/: .gitignore  poodle.toml  poodle_config.py  poodle_config_bak.py
example/src/: augassign.py  compare.py  constants.py  function_calls.py  loops.py  operators.py
example/tests/: __init__.py  test_augassign.py  test_compare.py  test_constants.py  test_function_calls.py  test_loops.py  test_operators.py
example2/: poodle_config.py  script.py
example2/mypackage/: main.py
example2/tests/: test_main.py  test_script.py
poodle/: cache.py
src/poodle/: __init__.py  __main__.py  cli.py  config.py  core.py  data.py  mutate.py  mutators.py  plugins.py  report.py  run.py  runners.py  util.py
src/poodle/common/: __init__.py  base.py  config.py  config_base.py  config_util.py  data.py  echo_wrapper.py  exceptions.py  file_utils.py  hook_spec.py  id_gen.py  mutator_base.py  option_collector.py  util.py
src/poodle/data_types/: __init__.py  data.py  interfaces.py  work.py
src/poodle/mutate/: __init__.py  bin_op.py  mutate.py
src/poodle/mutators/: __init__.py  bin_op.py  calls.py  compare.py  constant.py  key_word.py  mutator_bool_op.py  mutator_compare.py  mutator_decorator.py  mutator_function_call.py  mutator_keyword.py  mutator_lambda.py  mutator_loop_break.py  mutator_number.py  mutator_operation.py  mutator_return.py  mutator_string.py  mutator_subscript.py  mutator_unary_op.py  operators.py  unary_op.py
src/poodle/reporters/: __init__.py  basic.py  html.py  json.py  reporter_html.py  reporter_json.py  reporter_sysout.py  sysout.py
src/poodle/runners/: __init__.py  command_line.py  runner_cmd.py
src/poodle/templates/: dark_hc.jsonc  dark_modern.jsonc  html-report-detail.html.jinja  html-report-index.html.jinja  html-report-module.html.jinja  html-report.css  html-report.html.jinja  html-report.scss  light_hc.jsonc  light_modern.jsonc  style.css
src/poodle/types/: __init__.py  data.py  work.py
tests/: test_cli.py  test_config.py  test_core.py  test_data.py  test_mutate.py  test_mutators.py  test_report.py  test_run.py  test_runners.py  test_util.py
tests/common/: mock_util.py  test_config.py  test_config_base.py  test_config_util.py  test_data.py  test_echo_wrapper.py  test_exceptions.py  test_file_utils.py  test_hook_spec.py  test_id_gen.py  test_mutator_base.py  test_option_collector.py  test_util.py
tests/data_types/: test_data.py  test_interfaces.py  test_work.py
tests/mutate/: test_bin_op.py  test_init.py
tests/mutators/: test_bin_op.py  test_calls.py  test_compare.py  test_constant.py  test_mutator_bool_op.py  test_mutator_compare.py  test_mutator_decorator.py  test_mutator_function_call.py  test_mutator_keyword.py  test_mutator_lambda.py  test_mutator_loop_break.py  test_mutator_number.py  test_mutator_operation.py  test_mutator_return.py  test_mutator_string.py  test_mutator_subscript.py  test_mutator_unary_op.py  test_operators.py  test_unary_op.py
tests/reporters/: test_basic.py  test_html.py
tests/runners/: test_command_line.py
tests/types/: test_data.py  test_interfaces.py  test_work.py
